--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -14,8 +14,32 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Management Summary}
-Nach jeder Verletzung will der Sportler schnellstmöglich mit dem Training weiterfahren. In jedem Fall sollte die Verletzung jedoch bestmöglich geheilt sein, um Folgeschäden zu vermeiden. An der Eidgenössischen Hochschule für Sport in Magglingen wird bei Kreuzbandrissen ein Test mit einen Physiotherapeuten am verletzen Sportler durchgeführt. Dabei absolviert der Sportler diverse Übungen mit unterschiedlichen Belastungen des Knies. Die seitliche Auslenkung des Knies lässt auf dessen Genesungszustand schliessen. Dieser Test ist durch seine Subjektivität nicht die bestmögliche Lösung. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten. Eine zusätzliche Angabe der absoluten Auslenkung wäre für die Therapeuten hilfreich. Ziel der Arbeit ist ein Konzept zu entwickelt damit der Therapeut eine Basis für eine begründete Diagnose hat. Dabei soll ein 3D-Beschleunigungssensor verwendet werden.\par
+Eine Kreuzbandverletzung sollte, um Folgeschäden zu vermeiden, immer bestmöglich geheilt sein. Aus diesem Grund wird an der Eidgenössischen Hochschule für Sport in Magglingen ein Test geleitet durch einen Physiotherapeuten am verletzten Sportler durchgeführt. Der Sportler absolviert dabei diverse Übungen mit unterschiedlichen Belastungen des Knies. Die seitliche Auslenkung des Knies lässt auf seinen Genesungszustand schliessen. Dieser Test ist durch seine Subjektivität nicht die bestmögliche Lösung. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten. Eine zusätzliche Angabe der absoluten Auslenkung wäre für die Therapeuten hilfreich. Ziel der Arbeit ist es, ein Konzept zu entwickelt, damit dem Therapeuten eine Basis für eine begründete Diagnose bereitsteht. Dazu soll ein 3D-Beschleunigungssensor verwendet werden.\par
 %
-Auf dem Gebiet der Biomechanik wird viel Forschung zur Untersuchung eines Bewegungsablaufes mit 3D-Beschleunigungssensoren betrieben. In solchen Publikationen wurden diverse Ansätze gefunden. Ebenfalls wurde ein Beispielprojekt in LabVIEW entdeckt, in welchem bereits die Schätzung der Orientierung des Bewegungssensors im Raum umgesetzt ist. In MATLAB wurde das Konzept basierend auf der Literaturstudie und dem Beispielprojekt entwickelt. In diesem Konzept wird in einer anfänglichen Kalibrationsphase die Orientierung des Sensors geschätzt. Mit dieser Schätzung kann die Orientierung durch eine Rotation kompensiert werden. Durch diese Rotation wird die Erdbeschleunigung von der Beschleunigung der Bewegung des Knies getrennt. Auf Basis eines bekannten physikalisch grundlegenden Gesetzes kann durch zweifache Integration der Beschleunigung auf den zurückgelegten Weg geschlossen werden. Mehrere Messreihen wurden aufgenommen um das Konzept zu überprüfen. Das Konzept wurde darauf teilweise in LabVIEW umgesetzt.\par
+Über das letzte Jahrzehnt wurde viel Forschung zur Analyse von Bewegungsabläufen mit 3D-Beschleunigungssensoren betrieben. Die Methoden können hauptsächlich auf direkte Integrationsmethoden und auf indirekte Kalman Filter basierende Methoden aufgeteilt werden. Da das Ziel dieser Arbeit die Bestimmung der seitlichen Knieauslenkung in statischen Tests ist, wurde in einem ersten Ansatz ein zweiteiliges Konzept entwickelt. In einem ersten Schritt wird während einer Kalibrationsphase die Orientierung des Sensors geschätzt und durch eine Rotation so kompensiert, dass die Projektion der Gravitation auf die horizontale Knieebene minimiert wird. In einem zweiten Schritt wird die seitliche Auslenkung des Knies durch direkte Integration ermittelt. Die Rotationswinkel des ersten Schrittes wurden mit den tiefpassgefilterten 3D-Beschleunigungsdaten geschätzt. Zur Integration auf der horizontalen Knieebene mittels Trapezmethode wurde ein äquivalentes digitales \acrshort{ac:iir}-Filter entwickelt. Dieses Konzept wurde in \gls{g:matlab} umgesetzt und auf den spezifisch erfassten experimentellen Daten validiert. Das Konzept wurde anschliessend auf einem \acrshort{ac:fpga} umgesetzt.\par
 %
-Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Erdbeschleunigung auf. Die Kompensation der Orientierung des Sensors ist zuverlässig. Die Bewegung des Knies in der definierten Ebene kann ebenfalls berechnet werden (siehe Abbildung). Das Konzept ist jedoch nicht fähig, Auslenkungen zu detektieren, die diese Ebene verlassen. Wird der Sensor nach der Kalibration zusätzlich rotiert, werden die Beschleunigungsdaten durch die Erdbeschleunigung verfälscht. Diese Verfälschung wird mit integriert und führt zu einem Drift. Aus diesem Grund wurde die Entwicklung eines neuen Ansatzes gestartet, bei welchem die Bewegung mittels eines Models in einen dynamischen und einen statischen Fall unterteilt werden kann. Die Bewegung des Knies kann als eine harmonische Funktion approximiert werden. Somit ist auch die Beschleunigung der Bewegung eine harmonische Funktion. Dabei zeigt sich, dass bei dynamischen Bewegungen oberhalb einer kritischen Frequenz der Einfluss der Gravitation auf die Beschleunigung der Bewegung vernachlässigt werden kann. Daraus lässt sich einen einfachen Algorithmus ableiten, was Bestandteil eines späteren Projektes sein wird.
+Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zum Erdbeschleunigungsvektor auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich validiert. Die Auslenkung des Knies in der Berechnungsebene wurde ebenfalls in einem experimentellen Umfeld ausgewertet. Dabei wurde eine Performance von \unit[-4.81]{cm} $\pm$\unit[0.35]{cm} bei einer Translation um \unit[-5]{cm}{dimension} erreicht. Für kleine Knieauslenkungen in der Integrationsebene ergibt sich daher eine Schätzungsgenauigkeit, die für die vorliegende Anwendung bei weitem ausreicht. Bei Auslenkungen, die zusätzlich eine Rotation beinhalten, erhöht sich der Fehler durch die Projektion der Gravitationskomponente auf die Integrationsebene. Diese Verfälschung wird mit integriert und führt zu einem Fehler in der Auslenkungsschätzung. Durch die theoretische Analyse dieser Auslenkungsfehler konnte das Konzept mit der Entwicklung eines Modells weiter verfeinert werden. Dieses Modell dient als Grundlage zur Erarbeitung zukünftiger Auslenkungsschätzungsmethoden.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%Nach jeder Verletzung will der Sportler schnellstmöglich mit dem Training weiterfahren. In jedem Fall sollte die Verletzung jedoch bestmöglich geheilt sein, um Folgeschäden zu vermeiden. An der Eidgenössischen Hochschule für Sport in Magglingen wird bei Kreuzbandrissen ein Test mit einen Physiotherapeuten am verletzen Sportler durchgeführt. Dabei absolviert der Sportler diverse Übungen mit unterschiedlichen Belastungen des Knies. Die seitliche Auslenkung des Knies lässt auf dessen Genesungszustand schliessen. Dieser Test ist durch seine Subjektivität nicht die bestmögliche Lösung. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten. Eine zusätzliche Angabe der absoluten Auslenkung wäre für die Therapeuten hilfreich. Ziel der Arbeit ist ein Konzept zu entwickelt damit der Therapeut eine Basis für eine begründete Diagnose hat. Dabei soll ein 3D-Beschleunigungssensor verwendet werden.\par
+%%
+%Auf dem Gebiet der Biomechanik wird viel Forschung zur Untersuchung eines Bewegungsablaufes mit 3D-Beschleunigungssensoren betrieben. In solchen Publikationen wurden diverse Ansätze gefunden. Ebenfalls wurde ein Beispielprojekt in LabVIEW entdeckt, in welchem bereits die Schätzung der Orientierung des Bewegungssensors im Raum umgesetzt ist. In MATLAB wurde das Konzept basierend auf der Literaturstudie und dem Beispielprojekt entwickelt. In diesem Konzept wird in einer anfänglichen Kalibrationsphase die Orientierung des Sensors geschätzt. Mit dieser Schätzung kann die Orientierung durch eine Rotation kompensiert werden. Durch diese Rotation wird die Erdbeschleunigung von der Beschleunigung der Bewegung des Knies getrennt. Auf Basis eines bekannten physikalisch grundlegenden Gesetzes kann durch zweifache Integration der Beschleunigung auf den zurückgelegten Weg geschlossen werden. Mehrere Messreihen wurden aufgenommen um das Konzept zu überprüfen. Das Konzept wurde darauf teilweise in LabVIEW umgesetzt.\par
+%%
+%Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Erdbeschleunigung auf. Die Kompensation der Orientierung des Sensors ist zuverlässig. Die Bewegung des Knies in der definierten Ebene kann ebenfalls berechnet werden (siehe Abbildung). Das Konzept ist jedoch nicht fähig, Auslenkungen zu detektieren, die diese Ebene verlassen. Wird der Sensor nach der Kalibration zusätzlich rotiert, werden die Beschleunigungsdaten durch die Erdbeschleunigung verfälscht. Diese Verfälschung wird mit integriert und führt zu einem Drift. Aus diesem Grund wurde die Entwicklung eines neuen Ansatzes gestartet, bei welchem die Bewegung mittels eines Models in einen dynamischen und einen statischen Fall unterteilt werden kann. Die Bewegung des Knies kann als eine harmonische Funktion approximiert werden. Somit ist auch die Beschleunigung der Bewegung eine harmonische Funktion. Dabei zeigt sich, dass bei dynamischen Bewegungen oberhalb einer kritischen Frequenz der Einfluss der Gravitation auf die Beschleunigung der Bewegung vernachlässigt werden kann. Daraus lässt sich einen einfachen Algorithmus ableiten, was Bestandteil eines späteren Projektes sein wird.
