--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -13,36 +13,36 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Einleitung}\label{ch:einleitung}
-Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Diese Bewegen sich im Vergleich zu früheren Animationen sehr authentisch. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur die Bewegungen der Schauspieler. Der Film gilt zurzeit als einer der erfolgreichsten Filme. Durch die aufwändige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.\par
+Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Diese bewegen sich im Vergleich zu früheren Animationen sehr authentisch. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur die Bewegungen der Schauspieler. Der Film gilt zurzeit als einer der erfolgreichsten überhaupt. Durch die aufwändige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.\par
 %
 Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. Eine Methode ist ein optisches Tracken von Markern. Die Marker sind dabei auf dem Testobjekt an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum Tracken der Beine eines Läufers an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken befestigt. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und \gls{g:triangulation} kann anschliessend auf die Position des Markers im Raum geschlossen werden. Aus den Markern kann ein entsprechendes Modell des Beines erstellt werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind wie schon genannt nur in speziell dafür ausgelegten Laboren durchführbar. Durch diese Labore sind die Messungen zum einen ortsgebunden und zum andern durch die aufwändigen und teuren Kamerasystemen kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durchführbar sind.\par
 %
-Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder Gyroskopen erfolgt. Eine Bewegung kann auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht die absolute Position wie in den beschriebenen Kamera-Systemen, sondern die Beschleunigung. Um die Bewegung im Raum zu ermitteln benötigt man die Startposition und Orientierung des Sensors sowie die Beschleunigung und Richtung der Bewegung von diesem Punkt aus. Eine Möglichkeit ist, mit anschliessender doppelter Integration der Beschleunigung die neue Position zu berechnen. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich. Die Durchführung der Messungen ist nicht mehr örtlich an ein Labor gebunden.\par
+Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder Gyroskopen erfolgt. Eine Bewegung kann auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht die absolute Position, sondern muss basierend auf Integration der Beschleunigungsdaten den zurückgelegten Weg ermitteln. Dazu muss die Startposition und Orientierung des Sensors bekannt sein. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich. Die Durchführung der Messungen ist nicht mehr örtlich an ein Labor gebunden.\par
 %
-Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits ein kleiner Fehler in der Messung der Beschleunigung resultiert in einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor einen Drift sowie Offset aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwere Aufgabe. Durch die Masse des Sensors schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit die Messung.\par		
+Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits eine kleine Abweichung in der Messung der Beschleunigung resultiert in einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor prinzipbedingt Messfehler aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwere Aufgabe. Durch die Masse des Sensors schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit die Messung.\par		
 %
 \section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}\label{sec:zweck}
 Der Zeitpunkt des Wiedereinstieges in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren um den Trainingsrückstand aufzuholen und den getätigten Aufbau nicht weiter zu verlieren. Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
 %
-An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dienen zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \gls{ac:EHSM} mehreren Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entschiedet ob der Sportler das Training wieder aufnehmen darf oder noch pausieren soll.\par
+An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dienen zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \gls{ac:EHSM} mehreren Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entschiedet ob der Sportler das Training wieder aufnehmen darf oder noch pausieren muss.\par
 %
-Dieser Test mit anschliessender Auswertung der Kameraaufnahmen ist durch seine Subjektivität nicht die bestmögliche Lösung. Die Auslenkung des Knies ist schwer zu bestimmen und kann nur geschätzt werden. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg folgen auf die Gesundheit des Athleten, bei zu spätem Wiedereinstieg geht dem Sportler wichtige Zeit verloren. Den Therapeuten würde eine zusätzliche Angabe der absolute Auslenkung helfen, um eine bessere Entscheidung treffen zu können. Diese Auslenkung könnte beispielsweise mit einem Beschleunigungssensor gemessen werden.
+Dieser Test mit anschliessender Auswertung der Kameraaufnahmen ist durch seine Subjektivität nicht die bestmögliche Lösung. Die Auslenkung des Knies ist schwer zu bestimmen und kann nur geschätzt werden. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten, bei zu spätem Wiedereinstieg geht dem Sportler wichtige Zeit verloren. Den Therapeuten würde eine zusätzliche Angabe der absolute Auslenkung helfen, um eine bessere Entscheidung treffen zu können.
 %
 \section{Stand der Wissenschaft}
 Auf dem Gebiet der Biomechanik werden viele Forschungen zur Untersuchung eine Bewegungsablaufes mit Beschleunigungssensoren getätigt. Die Motivation ist in den meisten Arbeiten dieselbe. Das Messen von Bewegungsabläufen wurde bisher mit Kameras in speziell dafür vorgesehenen Laboren vorgenommen. Bewegungsabläufe in einem anderen Umfeld sind mit dieser Methode nicht möglich zu bestimmen. Viele Forschungen wollen aus diesem Grund kompakte Geräte mit einer günstigeren und komfortableren Lösung entwickeln.\par
 %
-Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor sollte den Probanden während den Aufzeichnungen nicht stören, damit sich dieser frei bewegen kann. Als Sensoren werden zuerst nur Beschleunigungssensoren verwendet. Mit diesem Aufbau konnte die Rotationswinkel bestimmt werden. In einem weiteren Versuch wurden zusätzlich Gyroskope verwendet um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version wurden die Gyroskope durch \gls{g:magnetometer} ersetzt. Somit wird beispielsweise der Fehler welche durch den Drift eines Gyroskopes entstehen ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden somit mehrere Sensoren angebracht \cite{lit:kochi}.\par
+Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor sollte den Probanden während den Aufzeichnungen nicht stören, damit sich dieser frei bewegen kann. Als Sensoren werden zuerst nur Beschleunigungssensoren verwendet. Mit diesem Aufbau konnte die Rotationswinkel bestimmt werden. In einem weiteren Versuch wurden zusätzlich Gyroskope verwendet um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version wurden die Gyroskope durch \gls{g:magnetometer} ersetzt. Somit wird beispielsweise der Fehler, der durch den Drift eines Gyroskopes entsteht, ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden somit mehrere Sensoren angebracht \cite{lit:kochi}.\par
 %
 Eine weitere Arbeit im Bereich Human Engineering der Universität Hakkaido in Japan verwendet einen Beschleunigungssensor sowie ein Gy­ro­s­kop. Diese Sensorpakete werden jeweils auf dem Oberschenkel sowie dem Schienbein angebracht. Es wurden bewusst keine \gls{g:magnetometer} verwendet, da diese in einer Wohnumgebung zu ungenaue Resultate erzielen. Mit den Sensoren kann die Bewegungsbeschleunigung von der Erdbeschleunigung getrennt werden. Zusätzlich ist die Höhe sowie der Abstand zwischen den Hüften, die Distanz zwischen Hüfte und Knie sowie Knie und Knöchel bekannt. Mit den Sensoren werden die Winkel der Gelenke bestimmt, womit wiederum durch die bekannten Abständen der einzelnen Gelenken deren Position im Raum berechnet werden kann. Zur Kreuzvalidierung wurden die geschätzten Bewegungen mit einem Kamera Bewegungs-Erfassungs-System überprüft. Hierbei wurden beachtliche Übereinstimmungen mit einem Korrelationskoeffizienten von 0.924 für die Bewegung am Knie erreicht \cite{lit:hokkaido}.
 
-In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert eine Methode, welche die Orientierung sowie die Position eines Beschleunigungssensors montiert auf einem Industrie-Roboter-Arm bestimmt. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit aufbauend auf der erstgenannten wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensor auf verschiedene Weisen mit Filterung aufbereitet um den Fehler zu minimieren \cite{lit:roboarm2}.\par
+In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert eine Methode, welche die Orientierung sowie die Position eines Beschleunigungssensors montiert auf einem Industrie-Roboter-Arm bestimmt. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem (\gls{g:worldframe}) kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit aufbauend auf der erstgenannten wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensor auf verschiedene Weisen mit Filterung aufbereitet um den Fehler zu minimieren \cite{lit:roboarm2}.\par
 %
-In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde das Tracken eines Bewegungsablauf mittels Beschleunigungssensor, Gyroskop und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann wird die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des Gyroskopes die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit  nur, wenn sich das Testobjekt bewegt. Die Bewegung wird mittels einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des Gyroskopes mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
+In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das Tracken eines Bewegungsablauf mittels Beschleunigungssensor, Gyroskop und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann wird die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des Gyroskopes die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit nur wenn sich das Testobjekt bewegt. Die Bewegung wird mit einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des Gyroskopes mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
 %
 \section{Aufgabenstellung}\label{s:aufgabenstellung} \todo{Check Referenz}
 	Die Aufgabenstellung wurde wie folgt durch die Betreuer und die Autoren definiert. Die Arbeit dauert 5 Wochen, wobei die Projektstudie eingerechnet ist. Für den genauen Wortlaut sei auf den Anhang \vref{ch:aufgabenstellung} verwiesen.\par
 	%
-	Während der Karriere eines Sportlers treten oft Verletzungen auf, die eine längere Trainingsabsolvents zur Folge haben können. In dieser Phase ist es wichtig den richtigen Zeitpunkt für den Wiedereinstieg zu finden, da sonst entweder wertvolle Zeit des Aufbaus verloren geht, oder die Verletzung wieder aufbrechen kann. Bisweilen wurde diese Beurteilung durch die subjektive Wahrnehmung eines Physiotherapeuten durchgeführt und hatte keine messtechnische Grundlagen. Im Zuge eines Forschungsprojekts soll nun eine Methodik entwickelt werden damit ein Therapeut eine Basis für eine begründete Diagnose hat.\par
+%	Während der Karriere eines Sportlers treten oft Verletzungen auf, die eine längere Trainingsabsolvents zur Folge haben können. In dieser Phase ist es wichtig den richtigen Zeitpunkt für den Wiedereinstieg zu finden, da sonst entweder wertvolle Zeit des Aufbaus verloren geht, oder die Verletzung wieder aufbrechen kann. Bisweilen wurde diese Beurteilung durch die subjektive Wahrnehmung eines Physiotherapeuten durchgeführt und hatte keine messtechnische Grundlagen. Im Zuge eines Forschungsprojekts soll nun eine Methodik entwickelt werden damit ein Therapeut eine Basis für eine begründete Diagnose hat.\par
 	%
 	Das Ziel dieser Arbeit sind folgende Punkte:
 	\begin{itemize}
@@ -50,7 +50,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 		\item Extraktion aller relevanten Daten für die Weiterverarbeitung
 		\item Entwicklung eines Demonstrators mit \gls{g:labview}
 		\item Ausarbeitung experimenteller Protokolle zur Kreuzvalidierung des Messmethodik 
-		\item Bereitstellung eines kontrolliert Messfeldes.
+		\item Bereitstellung eines kontrollierten Messfeldes.
 	\end{itemize} 
 	Zur Verfügung stehen eine Datenkarte (\gls{g:myrio}) von \gls{ac:ni}, die einen 3-Achsen Beschleunigungssensor integriert hat. Die Testumgebung muss durch die Autoren gestellt werden. 
 %
@@ -62,17 +62,26 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 \subsubsection*{Arbeitsphasen}\label{sss:arbeitsphasen}
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implementierung und Validierung
 	%
-	\paragraph*{Literaturstudie}
-		Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Durch dies werden vorhandenen Problemen früh erkannt und beeinflussen die späteren Phasen nicht negativ.
-	%
-	\paragraph*{Konzept}
-		Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessen zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
-	%
-	\paragraph*{Implementierung} 
-		In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab} Algorithmus nach \gls{g:labview} portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt eine Kreuzvalidierung mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Implementation}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demodulator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demodulator}).   
-	%
-	\paragraph*{Validierung}
-		Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
+	\begin{description}
+		\item[Literaturstudie] Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Durch dies werden vorhandenen Problemen früh erkannt und beeinflussen die späteren Phasen nicht negativ.
+		%
+		\item[Konzept] Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessen zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
+		%
+		\item[Implementierung] In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab} Algorithmus nach \gls{g:labview} portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt ein Vergleich mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Konzept-Implementation}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demonstrator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demonstrator}).
+		%   
+		\item[Validierung] Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
+	\end{description}
+%	\paragraph*{Literaturstudie}
+%		Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Durch dies werden vorhandenen Problemen früh erkannt und beeinflussen die späteren Phasen nicht negativ.
+%	%
+%	\paragraph*{Konzept}
+%		Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessen zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
+%	%
+%	\paragraph*{Implementierung} 
+%		In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab} Algorithmus nach \gls{g:labview} portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt eine Kreuzvalidierung mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Implementation}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demodulator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demodulator}).   
+%	%
+%	\paragraph*{Validierung}
+%		Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
 %
 %
 \subsubsection*{Zeitplan}
@@ -86,9 +95,9 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 	\begin{description}
 		\item[wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
 		%
-		\item[Machbarkeit gewährleistet] Am Ende der Konzeptphase muss ein Algorithmus vorliegen, der die Machbarkeit des Projekts gewährleistet. Abgeschlossen ist die am \textbf{11.06.2014}.
+		\item[Machbarkeit gewährleistet] Am Ende der Konzeptphase muss ein Algorithmus vorliegen, der die Machbarkeit des Projekts gewährleistet. Abgeschlossen ist dies am \textbf{11.06.2014}.
 		%
-		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist fertige Umsetzung des Konzept in \gls{g:labview}. Dies soll bis am \textbf{19.06.2014} erfolgen.
+		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist die fertige Umsetzung des Konzept in \gls{g:labview}. Dies soll bis am \textbf{19.06.2014} erfolgen.
 		%
 		\item[Zusammenfassung] Abschliessend wir das gesamte Projekt einer Validierung unterzogen. Diese Phase ist am \textbf{26.06.2014} abgeschlossen.
 		%
@@ -110,7 +119,7 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 %
 %
 % Anforderungen
-\section{Anforderungen}\label{s:anforderungen} \todo{umschreiben, ergänzen}
+\section{Anforderungen}\label{s:anforderungen}
 	Da kein Pflichtenheft zu diesem Projekt existiert, wird folgend die Anforderungen an das Messprinzip definiert und erklärt.\par
 	%
 	\subsection{Messbereich}\label{ss:messbereich}
@@ -128,6 +137,6 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 %
 %
 \section{Angrenzende Projekte}
-Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \gls{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. In dieser hier vorliegenden Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
+Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \acrfull{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. In dieser hier vorliegenden Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
 	
 
